force-app/main/default/objects/Produit_Except__c/Produit_Except__c.object-meta.xml
<CustomObject>
    <label>Produit Except</label>
    <nameField>
        <displayFormat>PHT/{YYYY}/{000000}</displayFormat>
        <label>Numéro de Produit Except</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produits Excepts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>