force-app/main/default/objects/Produit_Except__c/fields/Coefficient_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Coefficient_de_vente__c</fullName>
    <formula>Prix_vente_total__c /  Prix_achat_total__c</formula>
    <label>Coefficient de vente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>