force-app/main/default/objects/Produit_Except__c/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <inlineHelpText>Préciser intérieur et extérieur</inlineHelpText>
    <label>Couleur</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>