force-app/main/default/objects/Produit_Except__c/fields/Delai__c.field-meta.xml
<CustomField>
    <fullName>Delai__c</fullName>
    <inlineHelpText>en semaines</inlineHelpText>
    <label>Délai</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>