force-app/main/default/objects/Produit_Except__c/fields/Demande_except__c.field-meta.xml
<CustomField>
    <fullName>Demande_except__c</fullName>
    <description>Jointure En-tête de demande &lt;-&gt; Produit(s)</description>
    <label>Demande Except</label>
    <referenceTo>Except__c</referenceTo>
    <relationshipLabel>Produits Excepts</relationshipLabel>
    <relationshipName>Produits_Excepts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>