force-app/main/default/objects/Produit_Except__c/fields/Description_options__c.field-meta.xml
<CustomField>
    <fullName>Description_options__c</fullName>
    <label>Description et options</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>