force-app/main/default/objects/Produit_Except__c/fields/Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Hauteur__c</fullName>
    <label>Hauteur</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>