force-app/main/default/objects/Produit_Except__c/fields/largeur__c.field-meta.xml
<CustomField>
    <fullName>largeur__c</fullName>
    <label>Largeur</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>