force-app/main/default/objects/Produit_Except__c/fields/Masse_marge_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Masse_marge_catalogue__c</fullName>
    <formula>Prix_vente_total__c -  Prix_achat_total__c</formula>
    <label>Masse marge catalogue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>