force-app/main/default/objects/Produit_Except__c/fields/Materiau__c.field-meta.xml
<CustomField>
    <fullName>Materiau__c</fullName>
    <label>Matériau</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Materiaux</valueSetName>
    </valueSet>
</CustomField>