force-app/main/default/objects/Produit_Except__c/fields/materiau_autre__c.field-meta.xml
<CustomField>
    <fullName>materiau_autre__c</fullName>
    <label>Matériau autre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>