force-app/main/default/objects/Produit_Except__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <inlineHelpText>Préciser le motif de passage en demande except par rapport à l&apos;offre référencée</inlineHelpText>
    <label>Motif</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hors dimensions</fullName>
            </value>
            <value>
                <fullName>Couleur spécifique</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Non référencé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>