force-app/main/default/objects/Produit_Except__c/fields/Nb_vantaux__c.field-meta.xml
<CustomField>
    <fullName>Nb_vantaux__c</fullName>
    <label>Nombre de vantaux</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>