force-app/main/default/objects/Produit_Except__c/fields/Prix_achat_total__c.field-meta.xml
<CustomField>
    <fullName>Prix_achat_total__c</fullName>
    <formula>Prix_achat_unitaire__c *  Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix d&apos;achat total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>