force-app/main/default/objects/Produit_Except__c/fields/Prix_achat_unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_achat_unitaire__c</fullName>
    <label>Prix d&apos;achat unitaire</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>