force-app/main/default/objects/Produit_Except__c/fields/Prix_vente_unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_vente_unitaire__c</fullName>
    <label>Prix de vente unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>