force-app/main/default/objects/Produit_Except__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <label>Produit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_de_produits</valueSetName>
    </valueSet>
</CustomField>