force-app/main/default/objects/Produit_Except__c/fields/Produit_autre__c.field-meta.xml
<CustomField>
    <fullName>Produit_autre__c</fullName>
    <label>Produit autre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>