force-app/main/default/objects/Produit_Except__c/fields/Taux_de_marge_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_marge_catalogue__c</fullName>
    <formula>1-(Prix_achat_total__c  /  Prix_vente_total__c )</formula>
    <label>Taux de marge catalogue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>